# mfouesneau.github.com

./: CITATION.cff  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  index.html  index.html.old  params.json  posts-list.html  publication-list.html  publist.html  rss-post.xml  setup.cfg
.github/workflows/: docs.yml
alpha/css/: frame.css
beta/: .cv.html.swp  .index.html.swp  .research.html.swp  cv.html  research.html
beta/js/: chaos.js
css/: .custom.css.swp  .frame.css.swp  custom.css  custom.css~  grayscale.css
docs/: build.py  config.yml
docs/beast/: Tutorial.ipynb
docs/content/: aboutme.md  contacts.md  cv.md  index.md  outsideprojects.md  posts.md  projects.md  publication_list.md  publications.md  services.md  testimonials.md
docs/de/: .buildinfo  README.html  de.html  genindex.html  index.html  modules.html  objects.inv  pbar.html  py-modindex.html  search.html  searchindex.js  test.html
docs/ezdata/: ezdata.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/fitline/: README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
js/: writing.js
phat/: index.html
pim/: _bottom.php  _menu.php  admin.php  help.php  index.html  news.php  results.php  task.php
posts/: arxiv_display.html  empirical_corona_fluxcalibration.html  gaia_dr3.html  new_website.html  python_readtime_estimate.html
projects/: datadrivenmodels.html  gaia.html  gaiaunlimited.html
template/: build.py  font-awesome  index.template  research.template  scripts.html
tmp/: index.html
(+251 files in other folders)
