[metadata]
name = website
version = 0.0.1
author = Morgan Fouesneau
author_email = fouesneau@mpia.de
description = simplified website generator for my personal webpage
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/mfouesneau/mfouesneau.github.io
project_urls =
    Bug Tracker = https://github.com/mfouesneau/mfouesneau.github.io
    Sourse Code = https://github.com/mfouesneau/mfouesneau.github.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7
include_package_data = true

# Example of how to add dependencies:
install_requires =
  importlib-metadata >= 2.0 ; python_version < "3.8"
  markdown
  pyyaml
  ads @ git+https://github.com/Benjamin147/ads@dev-3.10 ;corrects bugs in ads

[options.packages.find]
where = src

[options.extras_require]
docs =
  markdown
test =
  pytest
